# willbuy

./: .env.op  .gitignore  .prettierignore  CLAUDE.md  README.md  eslint.config.mjs  eslint.fixtures.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts  vitest.workspace.ts
.samo/: .gitignore  config.json
apps/aggregator/: .dockerignore  Dockerfile  pyproject.toml
apps/aggregator/src/aggregator/: __init__.py  cluster.py  db.py  labeler.py  main.py  stats.py
apps/aggregator/src/willbuy_aggregator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
apps/aggregator/tests/: test_bs_map_get.py  test_build_report_json.py  test_cli_and_connect.py  test_cli_llm_caller.py  test_cluster.py  test_cluster_constants.py  test_cluster_hdbscan_params_pin.py  test_cluster_with_labels.py  test_converted_paid_weights_pin.py  test_db.py  test_db_shim.py  test_email_notifications.py  test_helper_functions.py  test_labeler.py  test_labeler_prompt.py  test_main_cluster_constants_pin.py  test_main_constants.py  test_main_e2e.py  test_main_status_strings.py  test_mcnemar.py  test_mcnemar_boundary.py  test_next_action_weights.py  test_normalize_findings.py  test_paired_delta_edge.py  test_paired_stats_to_dict.py  test_read_backstories.py  test_read_visits.py  test_report_verdict.py  test_score_visit.py  test_scoring_constants.py  test_significance_threshold_pin.py  test_spec_constants.py  test_stats.py  test_stats_test_params_pin.py  test_visit_helpers.py  test_visits_helpers.py
configs/: banner-selectors.yaml
infra/: README.md
(+464 files in other folders)
